digdag_study/digdag_kube/digdag-ha/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: digdag-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - http:
        paths:
        - path: /(.*)
          pathType: Prefix
          backend:
            service:
              name: digdag-api-svc
              port:
                number: 65432
